--- a/src/components/bio.css
+++ b/src/components/bio.css
@@ -1,49 +1,67 @@
-.kuromi{
-    height: 80%;
-    width: 80%;
-}
-.bio-upside{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 300px;
-}
-.bio-downside{
-    height: 250px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.bio-links{
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-}
-.bio-links button{
-    border: none;
-    width: 80%;
-    height: 60px;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 1.2rem;
-    font-weight: bold;
-    letter-spacing: 0.1em;
+.kuromi {
+  height: 80%;
+  width: 80%;
+  animation: up-down 3s infinite ease-in-out;
 }
 
-.button-github{
-    background-color: var(--primary-color);
-    color: white;
+.bio-upside {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 270px;
+}
+.bio-downside {
+  height: 250px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.bio-links {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+}
+.bio-links button {
+  border: none;
+  width: 80%;
+  height: 60px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: bold;
+  letter-spacing: 0.1em;
 }
 
-.button-linkedin{
-    background-color: var(--secondary-color);
-    color: white;
+.button-github {
+  background-color: var(--primary-color);
+  color: white;
 }
 
-.button-youtube{
-    background-color: var(--tertiary-color);
-    color: white;
+.button-linkedin {
+  background-color: var(--secondary-color);
+  color: white;
+}
+
+.button-youtube {
+  background-color: var(--tertiary-color);
+  color: white;
+}
+
+.bio-info{
+    text-align: left;
+}
+
+@keyframes up-down {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-25px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
